--- a/static/stylesheets/seedsInfos.css
+++ b/static/stylesheets/seedsInfos.css
@@ -45,6 +45,18 @@ td {
   height: 200px;
 }
 
+.defaultButton button{
+  border-radius: 30px;
+}
+
+#download-section#download-sectio\+n{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+}
+
 @media (max-width:1040px) and (min-width:621px) {
   .imgs-container{
     grid-template-columns: 100%;
