--- a/views/index.html
+++ b/views/index.html
@@ -13,81 +13,339 @@
 
     <title>TetraSeed - Ferramenta de Classificação de sementes</title>
     <link rel="icon" type="image/x-icon" href="./static/Assets/Logo/logo.png">
-    <link href="./static/stylesheets/style.css" rel="stylesheet">
-
+    <link href="./static/stylesheets/UploadSection.css" rel="stylesheet">
+    <link href="./static/stylesheets/Header.css" rel="stylesheet">
+    <link href="./static/stylesheets/Index.css" rel="stylesheet">
+    <link href="./static/stylesheets/About.css" rel="stylesheet">
+    <link href="./static/stylesheets/Team.css" rel="stylesheet">
+    <link href="./static/stylesheets/Footer.css" rel="stylesheet">
 
 </head>
 
-<body style="background-color: #8D3B30">
-    <main-header></main-header>
-    <div class="modelHolder">
-        <label>Selecione o modelo a ser utilizado</label>
-        <select name="model">
-            {% for model in models.result %}        
-            <option value= `{{model.id}}`> {{model.name}}</option>
-            {% endfor %}
-        </select>
-    </div>
-    <section class="container-section" id="main-section">
-        <div class="container container-drag ext">
-            <label class="drag-title">Parte externa da semente</label>
-            <div class="drag-section-external">
-                <div class="drag-section-internal">
-                    <div class="drag-drop" id="drag-drop-ext"
-                        style="display: flex; justify-content: center; align-items: center;"
-                        ondrop="dropHandler(event,'externa');" ondragover="dragOverHandler(event,'externa');">
-                        <div class="drag-text">
-                            <label>Arraste e solte as imagens aqui!
-                                <p style="font-weight: normal;">arquivos aceitos: .jpeg, .jpg</p>
-                            </label>
-                            <button class="upload-button">
-                                <label for="imgButtonExt">Ou faça o upload clicando aqui!!</label>
-                                <input type="file" name="imgButtonExt" id="imgButtonExt" style="display: none;"
-                                    accept="image/*" onchange="uploadImgInput(event,'externa')">
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="imgExtIconContainer">
-                <img class="imgExtIconContainer" id="preview" src="" width="40%">
-            </div>
-        </div>
-        <div class="container container-drag int">
-            <label class="drag-title">Parte interna da semente</label>
-            <div class="drag-section-external">
-                <div class="drag-section-internal">
-                    <div class="drag-drop" id="drag-drop-int"
-                        style="display: flex; justify-content: center; align-items: center;"
-                        ondrop="dropHandler(event,'interna');" ondragover="dragOverHandler(event,'interna');">
-                        <div class="drag-text">
-                            <label>Arraste e solte as imagens aqui!
-                                <p style="font-weight: normal;">arquivos aceitos: .jpeg, .jpg</p>
-                            </label>
-                            <button class="upload-button">
-                                <label for="imgButtonInt">Ou faça o upload clicando aqui!!</label>
-                                <input type="file" name="imgButtonInt" id="imgButtonInt" style="display: none;"
-                                    accept="image/*" onchange="uploadImgInput(event,'interna')">
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="imgIntIconContainer">
-                <img class="imgIntIconContainer" id="previews" src="" width="40%">
-            </div>
-        </div>
-        <modal-loading></modal-loading>
+<body style="background-color: #FAFAFA">
+    <header>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light logo">
+            <a href="/" class="navbar-brand">
+                <div style="display: flex;">
+                    <img src="{{ url_for('static', filename='Assets/Logo/logo.png') }}"
+                        style="width: 50px;height: 50px;" alt="logo">
+                    <div class="brandName"><strong>Tetra</strong>Seed</div>
 
+                </div>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="container-fluid">
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto float-right" style="margin-left:10px ;">
+                        <li class="nav-item">
+                            <a class="nav-link itensNavLink" href="#inicio">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link itensNavLink" href="#sobre">Sobre</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link itensNavLink" href="#equipe">Equipe</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link itensNavLink" href="/uploadModel">Upload de modelo</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+
+        <section id="inicio" class="flex images">
+
+            <div class=" container-section upload-section">
+
+                <div class="container-drag ext">
+                    <div class="img-container" id="drag-drop-ext" ondrop="dropHandler(event,'externa');"
+                        ondragover="dragOverHandler(event,'externa');">
+                        <div class="img-titles flex">
+                            <h2 class="img-title">Parte <span class="red-text">externa</span> da semente</h2>
+                            <h3>Arraste e solte a imagem aqui</h3>
+                        </div>
+                        <button class="upload-button">
+                            <label class="label-button" for="imgButtonExt">Ou selecione o arquivo</label>
+
+                            <input class="input-button" type="file" name="imgButtonExt" id="imgButtonExt"
+                                style="display: none;" accept="image/png,image/jpeg,image/jpg,image/svg+xml" 
+                                onchange="uploadImgInput(event,'externa')">
+                        </button>
+
+                    </div>
+                    <div class="imgExtIconContainer">
+                        <img class="imgExtIconContainer" id="preview" src="" width="40%">
+                    </div>
+                </div>
+                <div class="container-drag int">
+                    <div class="img-container" id="drag-drop-ext" ondrop="dropHandler(event,'interna');"
+                        ondragover="dragOverHandler(event,'interna');">
+                        <div class="img-titles flex">
+                            <h2 class="img-title">Parte <span class="red-text">interna</span> da semente</h2>
+                            <h3>Arraste e solte a imagem aqui</h3>
+                        </div>
+                        <button class="upload-button">
+                            <label class="label-button" for="imgButtonInt">Ou selecione o arquivo</label>
+
+                            <input class="input-button" type="file" name="imgButtonInt" id="imgButtonInt"
+                                style="display: none;" accept="image/png,image/jpeg,image/jpg,image/svg+xml" 
+                                onchange="uploadImgInput(event,'interna')">
+                        </button>
+
+                    </div>
+                    <div class="imgIntIconContainer">
+                        <img class="imgIntIconContainer" id="previews" src="" width="40%">
+                    </div>
+                </div>
+
+            </div>
+            <!-- /Necessário paginar/ -->
+            <div class="modelHolder img-titles">
+                <h3>Selecione o modelo a ser utilizado</h3>
+                <select name="model">
+                    {% for model in models.result %}
+                    <option value=`{{model.id}}`> {{model.name}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <!-- // -->
+
+            <modal-loading></modal-loading>
+            <modal-error></modal-error>
+
+        </section>
+        <div class="IndexButtonsSend">
+            <div id="botao" class="mt-5 defaultButton">
+                <button type="button" class="btn btn-danger btn-lg botaoEnviar" onclick="sendToBack()">Gerar
+                    Relatório</button>
+            </div>
+            <div id="botaoImgs" class="mt-5 defaultButton">
+                <button type="button" class="btn btn-danger btn-lg botaoEnviar" onclick="sendToBack(true)">Gerar Relatório
+                    com imagens</button>
+            </div>
+        </div>
+
+        <section id="sobre" class="about">
+            <div class="about-text flex">
+                <h2><strong>Sobre a <span class="red-text">TetraSeed</span></strong></h2>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <br/>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="image-replace">
+                <img src="{{ url_for('static', filename='Assets/Logo/logo.png') }}"
+                style="width: 60%; height: 60%;">
+            </div>
+        </section>
+        <section id="equipe" class="team flex">
+            <h2 class="red-text">Equipe</h2>
+            <p><span class="red-text"><strong>Tetra</strong>Seed </span>é um projeto supervisionado pelo Prof. Paulo Cesar Cortez feito em colaboração com a turma de 2022.2 da disciplina de Fundamentos de Processamento Digital de Imagens da Universidade Federal do Ceará.</p>
+            <div class="team-list"></div>
+            <div class="list-module list-section">
+            <div class="list-space">
+                <ul style="margin-bottom: 16px">
+                    <h3 class="list-title">Gerência:</h3>
+                    <li>
+                        <p>Atila Nobrega</p>
+                    </li>
+                    <li>
+                        <p>Lucas Martins</p>
+                    </li>
+                </ul>
+                <ul>
+                    <h3 class="list-title">Interface:</h3>
+                    <li>
+                        <p>Victor Ehrich (Lider)</p>
+                    </li>
+                    <li>
+                        <p>Mateus Melo</p>
+                    </li>
+                    <li>
+                        <p>Yago Costa</p>
+                    </li>
+                    <li>
+                        <p>Felipe Jonathan</p>
+                    </li>
+                    <li>
+                        <p>Rafael Bruno</p>
+                    </li>
+                    <li>
+                        <p>Breno de Souza</p>
+                    </li>
+                    <li>
+                        <p>Anderson Moura</p>
+                    </li>
+                    <li>
+                        <p>Igor Torquato</p>
+                    </li>
+                    <li>
+                        <p>Thyago Freitas</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="list-space">
+                <ul style="margin-bottom: 16px">
+                    <h3 class="list-title">Pré-processamento:</h3>
+                    <li>
+                        <p>Renato Avelino (Lider)</p>
+                    </li>
+                    <li>
+                        <p>Anna Vithoria (Líder)</p>
+                    </li>
+                    <li>
+                        <p>Leonardo Monteiro</p>
+                    </li>
+                    <li>
+                        <p>Eduardo Monteiro</p>
+                    </li>
+                    <li>
+                        <p>Luann Lucas</p>
+                    </li>
+                    <li>
+                        <p>Paulo Davi</p>
+                    </li>
+                    <li>
+                        <p>Alan de Abreu</p>
+                    </li>
+                    <li>
+                        <p>Carla Mariana</p>
+                    </li>
+                    <li>
+                        <p>Leo Victor</p>
+                    </li>
+                </ul>
+                <ul>
+                    <h3 class="list-title">Documentação:</h3>
+                    <li>
+                        <p>Nelson Rodrigues (Líder)</p>
+                    </li>
+                    <li>
+                        <p>Antônio Fernandes</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="list-space">
+                <ul style="margin-bottom: 16px">
+                    <h3 class="list-title">Processamento/Pós:</h3>
+                    <li>
+                        <p>Vitor Rosa (Lider)</p>
+                    </li>
+                    <li>
+                        <p>Lucas Noronha (Líder)</p>
+                    </li>
+                    <li>
+                        <p>Vandemberg Monteiro</p>
+                    </li>
+                    <li>
+                        <p>Davi Queiroz</p>
+                    </li>
+                    <li>
+                        <p>Marcos Augusto</p>
+                    </li>
+                    <li>
+                        <p>Danilo Palheta</p>
+                    </li>
+                    <li>
+                        <p>Catherine Bezerra</p>
+                    </li>
+                    <li>
+                        <p>Matheus Rocha</p>
+                    </li>
+                    <li>
+                        <p>Kayann Costa</p>
+                    </li>
+                    <li>
+                        <p>Francisco Thierry</p>
+                    </li>
+                    <li>
+                        <p>Brendon Wesley</p>
+                    </li>
+                    <li>
+                        <p>André Luiz</p>
+                    </li>
+                    <li>
+                        <p>João Marcelo</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="list-space">
+                <ul style="margin-bottom: 16px">
+                    <h3 class="list-title">Classificação:</h3>
+                    <li>
+                        <p>Luan Ícaro (Líder)</p>
+                    </li>
+                    <li>
+                        <p>Ailson Alexandre</p>
+                    </li>
+                    <li>
+                        <p>Neander Danúbioo</p>
+                    </li>
+                    <li>
+                        <p>Tácio Soares</p>
+                    </li>
+                    <li>
+                        <p>Mateus Melo </p>
+                    </li>
+                    <li>
+                        <p>Renan Martins</p>
+                    </li>
+                    <li>
+                        <p>Antonio Wellington</p>
+                    </li>
+                </ul>
+                <ul>
+                    <h3 class="list-title">Testes:</h3>
+                    <li>
+                        <p>Helano Fontenele (Líder)</p>
+                    </li>
+                    <li>
+                        <p>Nicolas de Carvalho</p>
+                    </li>
+                    <li>
+                        <p>Vitor Gabriel</p>
+                    </li>
+                    <li>
+                        <p>Athur Pinto</p>
+                    </li>
+                    <li>
+                        <p>Lucas SIlva</p>
+                    </li>
+                    <li>
+                        <p>Ismael José</p>
+                    </li>
+                    <li>
+                        <p>Keven da Silva</p>
+                    </li>
+                    <li>
+                        <p>Luan Daniel</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </section>
-    <div id="botao" class="mt-5">
-        <button type="button" class="btn btn-danger btn-lg botaoEnviar" onclick="sendToBack()">Gerar Relatório</button>
-    </div>
-    <div id="botaoImgs" class="mt-5">
-        <button type="button" class="btn btn-danger btn-lg botaoEnviar" onclick="sendToBack(true)">Gerar Relatório com imagens</button>
-    </div>
-
-    <main-footer></main-footer>
+        
+    </main>
+    <footer class="flex-row" style="display: flex;align-items: center">
+        <a href="/">
+            <span class="logo flex-row">
+                <img src="{{ url_for('static', filename='Assets/Logo/logo.png') }}" alt="logo">
+                <strong>Tetra</strong>
+                <div>Seed</div>
+            </span>
+        </a>
+        <nav>
+            <a href="https://github.com/PDI-2022" target="_blank">
+                <img src="{{ url_for('static', filename='Assets/Icons/githubIcon.svg') }}" alt="">
+            </a>
+        </nav>
+    </footer>
 </body>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 
