--- a/views/seeds.html
+++ b/views/seeds.html
@@ -13,14 +13,57 @@
 
     <title>TetraSeed - Ferramenta de Classificação de sementes</title>
     <link rel="icon" type="image/x-icon" href="./static/Assets/Logo/logo.png">
-    <link href="./static/stylesheets/style.css" rel="stylesheet">
     <link href="./static/stylesheets/seedsInfos.css" rel="stylesheet">
+    <link href="./static/stylesheets/Header.css" rel="stylesheet">
+    <link href="./static/stylesheets/Footer.css" rel="stylesheet">
 
 </head>
 
-<body style="background-color: #8D3B30">
-    <main-header></main-header>
-    <main-footer></main-footer>
+<body style="background-color: #FAFAFA">
+    <header>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light logo">
+            <a href="/" class="navbar-brand">
+                <div style="display: flex;">
+                    <img src="{{ url_for('static', filename='Assets/Logo/logo.png') }}"
+                        style="width: 50px;height: 50px;" alt="logo">
+                    <div class="brandName"><strong>Tetra</strong>Seed</div>
+
+                </div>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="container-fluid">
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto float-right" style="margin-left:10px ;">
+                        <li class="nav-item">
+                            <a class="nav-link itensNavLink" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link itensNavLink" href="/uploadModel">Upload de modelo</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <footer class="flex-row" style="display: flex;align-items: center">
+        <a href="/">
+            <span class="logo flex-row">
+                <img src="{{ url_for('static', filename='Assets/Logo/logo.png') }}" alt="logo">
+                <strong>Tetra</strong>
+                <div>Seed</div>
+            </span>
+        </a>
+        <nav>
+            <a href="https://github.com/PDI-2022" target="_blank">
+                <img src="{{ url_for('static', filename='Assets/Icons/githubIcon.svg') }}" alt="">
+            </a>
+        </nav>
+    </footer>
 
 </body>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
