--- a/views/uploadModel.html
+++ b/views/uploadModel.html
@@ -13,43 +13,92 @@
 
     <title>TetraSeed - Ferramenta de Classificação de sementes</title>
     <link rel="icon" type="image/x-icon" href="./static/Assets/Logo/logo.png">
-    <link href="./static/stylesheets/style.css" rel="stylesheet">
+    <link href="./static/stylesheets/Header.css" rel="stylesheet">
+    <link href="./static/stylesheets/Footer.css" rel="stylesheet">
+    <link href="./static/stylesheets/UploadSection.css" rel="stylesheet">
 
 </head>
 
-<body style="background-color: #8D3B30">
-    <main-header></main-header>
-    <div class="container container-drag ext">
-        <label class="drag-title">Upload do Modelo</label>
-        <div class="drag-section">
-            <div class="drag-drop" id="drag-drop-ext"
-                style="display: flex; justify-content: center; align-items: center;"
-                ondrop="dropHandler(event);" ondragover="dragOverHandler(event);">
-                <div class="drag-text">
-                    <label>Arraste e solte o modelo aqui!
-                        <p style="font-weight: normal;">arquivos aceitos: .jpeg, .jpg</p>
-                    </label>
-                    <button class="upload-button">
-                        <label for="imgButton">Ou faça o upload clicando aqui!!</label>
-                        <input type="file" name="imgButton" id="imgButton" style="display: none;" accept=".zip,.rar,.7zip"
-                            onchange="uploadFileInput(event)">
-                    </button>
+<body style="background-color: #FAFAFA">
+    <modal-loading></modal-loading>
+    <modal-error></modal-error>
+    <header>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light logo">
+            <a href="/" class="navbar-brand">
+                <div style="display: flex;">
+                    <img src="{{ url_for('static', filename='Assets/Logo/logo.png') }}"
+                        style="width: 50px;height: 50px;" alt="logo">
+                    <div class="brandName"><strong>Tetra</strong>Seed</div>
+
+                </div>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="container-fluid">
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto float-right" style="margin-left:10px ;">
+                        <li class="nav-item">
+                            <a class="nav-link itensNavLink" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link itensNavLink" href="/uploadModel">Upload de modelo</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
+        </nav>
+    </header>
+
+    <div style="width: 100%;display:flex;align-items:center;justify-content: center;">
+        <div class="container-drag ext">
+            <div class="img-container" id="drag-drop-ext" ondrop="dropHandler(event);"
+                ondragover="dragOverHandler(event);">
+                <div class="img-titles flex">
+                    <h2 class="img-title">Upload do <span class="red-text">modelo</span></h2>
+                    <h3>Arraste e solte o modelo aqui</h3>
+                </div>
+                <button class="upload-button">
+                    <label class="label-button" for="fileButton">Ou selecione o arquivo</label>
+
+                    <input class="input-button" type="file" name="fileButton" id="fileButton" style="display: none;"
+                        accept=".zip" onchange="uploadFileInput(event)">
+                </button>
+
+            </div>
+            <div class="fileContainer">
+            </div>
+            <div style="display: flex;align-items:center;flex-direction: column;">
+                <h3 class="img-title">Nome do modelo a ser salvo</h3>
+                <input type="text" name="InputName" id="InputName">
+            </div>
+            <div id="botao" class="mt-5 defaultButton" style="margin-bottom: 180px;">
+                <button type="button" id="sendModelBtn" class="btn btn-danger btn-lg botaoEnviar"
+                    onclick="sendModel()">Enviar Model</button>
+            </div>
         </div>
-    </div>
-    <div>
-        <label>Nome da model</label>
-        <input type="text" name="InputName" id="InputName">
-    </div>
-    <div id="botao" class="mt-5">
-        <button type="button" id="sendModelBtn" class="btn btn-danger btn-lg botaoEnviar" onclick="sendModel()">Enviar Model</button>
-    </div>
-    <main-footer></main-footer>
 
+    </div>
+
+    <footer class="flex-row" style="display: flex;align-items: center">
+        <a href="/">
+            <span class="logo flex-row">
+                <img src="{{ url_for('static', filename='Assets/Logo/logo.png') }}" alt="logo">
+                <strong>Tetra</strong>
+                <div>Seed</div>
+            </span>
+        </a>
+        <nav>
+            <a href="https://github.com/PDI-2022" target="_blank">
+                <img src="{{ url_for('static', filename='Assets/Icons/githubIcon.svg') }}" alt="">
+            </a>
+        </nav>
+    </footer>
 </body>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 <script src="{{ url_for('static', filename='js/uploadModel.js') }}"></script>
 <script src="{{ url_for('static', filename='js/components/index.js') }}"></script>
 
